added new objects and install instructions to CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,12 +7,17 @@ include_directories (
     ${CMAKE_CURRENT_BINARY_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${LUA_INCLUDE_DIR}
+    ${CMAKE_INSTALL_PREFIX}
 )
  
 set (SOURCES
     main_wrapper.c
 )
+set(lib_dest "lib/")
+
+OPTION(BUILD_SHARED_LIBS ON)
  
 add_library (${PROJECT_NAME} SHARED ${SOURCES} ${LUA_LIBRARIES})
-target_link_libraries (${PROJECT_NAME} lua5.1  git2)
+target_link_libraries (${PROJECT_NAME} lua5.1 git2)
 set_target_properties (${PROJECT_NAME} PROPERTIES PREFIX "")
+install(TARGETS ${PROJECT_NAME} DESTINATION "${lib_dest}" )
