cmake: add libgit2 detection
Find the libgit2 that is installed in the system and add the necessary
configuration to build against it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,18 @@
 cmake_minimum_required (VERSION 3.0)
 project (luagit2 C)
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${luagit2_SOURCE_DIR}/cmake")
+
+MESSAGE("${CMAKE_MODULE_PATH}")
  
 find_package(Lua REQUIRED)
+find_package(LibGit2 REQUIRED)
  
 include_directories (
     ${CMAKE_CURRENT_BINARY_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${LUA_INCLUDE_DIR}
+    ${LIBGIT2_INCLUDE_DIR}
     ${CMAKE_INSTALL_PREFIX}
 )
 
@@ -19,6 +25,6 @@ set(lib_dest "lib/")
 OPTION(BUILD_SHARED_LIBS ON)
  
 add_library (${PROJECT_NAME} SHARED ${SOURCES} ${LUA_LIBRARIES})
-target_link_libraries (${PROJECT_NAME} lua5.1 git2)
+target_link_libraries (${PROJECT_NAME} lua5.3 git2)
 set_target_properties (${PROJECT_NAME} PROPERTIES PREFIX "")
 install(TARGETS ${PROJECT_NAME} DESTINATION "${lib_dest}" )
