--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,8 @@ set (SOURCES
              ${src_dest}/luagit2/signature/lua_signature.c
              ${src_dest}/luagit2/signature/lua_signature_help.c
              ${src_dest}/luagit2/tree/lua_tree.c
+             ${src_dest}/luagit2/tag/lua_tag.c
+             ${src_dest}/luagit2/object/lua_object.c
              ${src_dest}/main_wrapper.c 
  )
 
