--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set (SOURCES
              ${src_dest}/luagit2/branch/lua_branch_help.c
              ${src_dest}/luagit2/clone/lua_clone.c
              ${src_dest}/luagit2/commit/lua_commit.c
+             ${src_dest}/luagit2/config/lua_config_help.c
              ${src_dest}/luagit2/config/lua_config.c
              ${src_dest}/luagit2/cred/lua_cred.c
              ${src_dest}/luagit2/index/lua_index.c
