Source : Added Index module helper functions
Also registered functions in mainwrapper and updated installation instructions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ set (SOURCES
              ${src_dest}/luagit2/cred/lua_cred.c
              ${src_dest}/luagit2/cred/lua_cred_help.c
              ${src_dest}/luagit2/index/lua_index.c
+             ${src_dest}/luagit2/index/lua_index_help.c
              ${src_dest}/luagit2/oid/lua_oid.c
              ${src_dest}/luagit2/reference/lua_reference.c
              ${src_dest}/luagit2/repository/lua_repository.c
