source(status): added bindings & install instructions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,8 @@ set (SOURCES
              ${src_dest}/luagit2/reset/lua_reset.c
              ${src_dest}/luagit2/signature/lua_signature.c
              ${src_dest}/luagit2/signature/lua_signature_help.c
+             ${src_dest}/luagit2/status/lua_status.c
+             ${src_dest}/luagit2/status/lua_status_help.c
              ${src_dest}/luagit2/tree/lua_tree.c
              ${src_dest}/luagit2/tag/lua_tag.c
              ${src_dest}/luagit2/object/lua_object.c
