added install instructions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set (SOURCES
              ${src_dest}/luagit2/common/lua_common.c
              ${src_dest}/luagit2/libgit2/lua_libgit2.c
              ${src_dest}/luagit2/blame/lua_blame.c
+             ${src_dest}/luagit2/blame/lua_blame_help.c
              ${src_dest}/luagit2/blob/lua_blob.c
              ${src_dest}/luagit2/branch/lua_branch.c
              ${src_dest}/luagit2/branch/lua_branch_help.c
